[package]
name = "nmos6502"
description = "A no_std compliant NMOS6502 emulator suitable for embedded environments."
version = "1.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/super-saturn/nmos6502"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.num_enum]
version = "0.5.11"
default-features = false
features = []